--- a/styles/style.css
+++ b/styles/style.css
@@ -58,7 +58,8 @@
 
 .search-button,
 .voice-search-button,
-.header-icon-container {
+.header-icon-container,
+.scroll-button-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -162,4 +163,143 @@
 .sidebar-link div {
   font-size: 10px;
   margin-top: 8px;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  padding: 9% 25px 25px 6.4%;
+}
+
+.scroll-container {
+  display: grid;
+  grid-template-columns: 1fr 60px;
+  position: fixed;
+  top: 50px;
+  right: 0;
+  background-color: white;
+  padding-left: 6.4%;
+  z-index: 50;
+}
+
+.scroll-items {
+  display: flex;
+  gap: 12px;
+  text-align: center;
+  text-wrap: nowrap;
+  overflow: hidden;
+  margin: 18px 0;
+}
+
+.scroll-items li {
+  background-color: var(--primary-color);
+  padding: 8px 12px;
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 500;
+  color: rgb(15, 15, 15);
+  cursor: pointer;
+}
+
+.scroll-items li:hover {
+  background-color: rgb(229, 229, 229);
+}
+
+li.active,
+li.active:hover {
+  background-color: black;
+  color: white;
+}
+
+.scroll-button-container {
+  justify-content: flex-end;
+  padding-right: 10px;
+}
+
+.scroll-button {
+  padding: 10px;
+  border-radius: 50%;
+  border: none;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  cursor: pointer;
+  position: relative;
+}
+
+.scroll-button:hover {
+  background-color: var(--primary-color);
+}
+
+.scroll-button img {
+  width: 20px;
+}
+
+.video-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px 16px;
+}
+
+.thumbnail-container {
+  position: relative;
+}
+
+.thumbnail {
+  width: 100%;
+  border-radius: 12px;
+  margin-bottom: 10px;
+  transition: border-radius 0.35s;
+  cursor: pointer;
+}
+
+.video-preview:hover .thumbnail {
+  border-radius: 0;
+}
+
+.video-time {
+  color: white;
+  background-color: black;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 4px;
+  border-radius: 4px;
+  position: absolute;
+  right: 6px;
+  bottom: 22px;
+}
+
+.video-info-container {
+  display: flex;
+  position: relative;
+  cursor: pointer;
+}
+
+.channel-profile-picture img {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  margin-right: 12px;
+}
+
+.video-title {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  overflow: hidden;
+  margin: 0 18px 10px 0;
+}
+
+.channel-name-container {
+  display: inline-block;
+}
+
+.channel-name,
+.video-stats {
+  font-size: 14px;
+  color: rgb(96, 96, 96);
+}
+
+.channel-name {
+  margin-bottom: 4px;
 }
