--- a/styles/style.css
+++ b/styles/style.css
@@ -168,7 +168,7 @@
 .main-content {
   display: flex;
   flex-direction: column;
-  padding: 9% 25px 25px 6.4%;
+  padding: 145px 25px 25px 96px;
 }
 
 .scroll-container {
@@ -178,7 +178,7 @@
   top: 50px;
   right: 0;
   background-color: white;
-  padding-left: 6.4%;
+  padding-left: 92px;
   z-index: 50;
 }
 
@@ -302,4 +302,27 @@ li.active:hover {
 
 .channel-name {
   margin-bottom: 4px;
+}
+
+@media (max-width: 800px) {
+  .sidebar {
+    display: none;
+  }
+
+  .main-content,
+  .scroll-container {
+    padding-left: 25px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .video-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 1101px) and (max-width: 1400px) {
+  .video-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
