--- a/styles/style.css
+++ b/styles/style.css
@@ -177,7 +177,7 @@
   position: fixed;
   top: 50px;
   right: 0;
-  background-color: white;
+  background-color: var(--white);
   padding-left: 92px;
   z-index: 50;
 }
@@ -207,8 +207,8 @@
 
 li.active,
 li.active:hover {
-  background-color: black;
-  color: white;
+  background-color: rgb(0, 0, 0);
+  color: var(--white);
 }
 
 .scroll-button-container {
@@ -222,7 +222,7 @@ li.active:hover {
   border: none;
   display: flex;
   align-items: center;
-  background-color: white;
+  background-color: var(--white);
   cursor: pointer;
   position: relative;
 }
@@ -258,8 +258,8 @@ li.active:hover {
 }
 
 .video-time {
-  color: white;
-  background-color: black;
+  color: var(--white);
+  background-color: rgba(0, 0, 0, 0.75);
   font-size: 12px;
   font-weight: bold;
   padding: 4px;
@@ -286,8 +286,12 @@ li.active:hover {
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
-  overflow: hidden;
   margin: 0 18px 10px 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .channel-name-container {
@@ -302,6 +306,39 @@ li.active:hover {
 
 .channel-name {
   margin-bottom: 4px;
+}
+
+.tooltip {
+  background-color: rgba(96, 96, 96, 0.9);
+  color: var(--white);
+  font-size: 12px;
+  padding: 10px 8px;
+  border-radius: 4px;
+  position: absolute;
+  opacity: 0;
+  transition: opacity 0.15s;
+  pointer-events: none;
+  white-space: nowrap;
+}
+
+.header-icon-tooltip {
+  bottom: -50px;
+}
+
+.scroll-button-tooltip {
+  bottom: -30px;
+}
+
+.channel-name-tooltip {
+  top: -10px;
+}
+
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.header-icon-container:hover .tooltip,
+.scroll-button-container:hover .tooltip,
+.channel-name-container:hover .tooltip {
+  opacity: 1;
 }
 
 @media (max-width: 800px) {
