--- a/styles/style.css
+++ b/styles/style.css
@@ -116,9 +116,9 @@
 .notifications-count {
   background-color: rgb(204, 0, 0);
   color: var(--white);
-  font-size: 10px;
+  font-size: 12px;
   font-weight: 500px;
-  padding: 2px 5px;
+  padding: 1px 5px;
   border-radius: 50%;
   position: absolute;
   top: 6px;
@@ -247,6 +247,7 @@ li.active:hover {
 
 .thumbnail {
   width: 100%;
+  height: 100%;
   border-radius: 12px;
   margin-bottom: 10px;
   transition: border-radius 0.35s;
@@ -341,9 +342,50 @@ li.active:hover {
   opacity: 1;
 }
 
+@media (max-width: 500px) {
+  .middle-section {
+    margin-left: 0;
+  }
+
+  .voice-search-button,
+  .current-user {
+    display: none;
+  }
+
+  .video-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
 @media (max-width: 800px) {
+  .search-bar,
   .sidebar {
     display: none;
+  }
+
+  .middle-section {
+    justify-content: flex-end;
+    margin-right: 5px;
+  }
+
+  .search-button {
+    background-color: transparent;
+    border: none;
+    margin-right: 0;
+    width: 40px;
+    border-radius: 50%;
+  }
+
+  .voice-search-button {
+    background-color: transparent;
+  }
+
+  .voice-search-button:hover {
+    background-color: var(--primary-color);
+  }
+
+  .right-section {
+    min-width: unset;
   }
 
   .main-content,
@@ -352,7 +394,7 @@ li.active:hover {
   }
 }
 
-@media (max-width: 1100px) {
+@media (min-width: 501px) and (max-width: 1100px) {
   .video-grid {
     grid-template-columns: repeat(2, 1fr);
   }
